--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 Token = # Discord Token
 Prefix = # Bot Prefix
-Owners = # User Id 1234567890,1234567890
+OwnersId = # User Id [1234567890,1234567890]
+MusicRoleId = # Role Id to Show Music Bot List
