--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-sqlite3": "^9.4.3",
     "chalk": "4",
     "discord.js": "^14.14.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "pro.db": "^3.0.8",
     "quick.db": "^9.1.7"
