--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "author": "zangels0",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^9.4.3",
     "chalk": "4",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
-    "pro.db": "^3.0.8",
-    "quick.db": "^9.1.7"
+    "pro.db": "^3.0.8"
   }
 }
